...
		viewModel.delegate = self
		searchBar.delegate = self
		emptyView.isHidden = true
	}
	
	private func setAccesibilityID() {
		tableView.accessibilityIdentifier = "MoviesListTableView"
	}
	
	private func setupText() {
		searchBar.placeholder = "Search for movies"
	}
	
...
